welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:3: error: '(' expected but identifier found.
    for pas <- 1 to 8) {avance()};gauche}} 
        ^Runner:3: error: illegal start of simple expression
    for pas <- 1 to 8) {avance()};gauche}} 
                                        ^